GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program; if not, write to the Free Software
Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

============================================================

PyKota NEWS :

    - 1.20beta :
    
        - Minor changes in the debian directory.
        
    - 1.20alpha27 : 
    
        - Fixed many problems with translation files. In particular
          the brasilian portuguese translation file was incorrectly
          installed into the french "breton" locale directory.
          
        - Finished French translation.  
          
    - 1.20alpha26 :
    
        - LPRng support code should now better detect network
          printers' hostnames or IP addresses.
          
        - Fix for recently introduced bug in LPRng support.
        
        - Fix for incorrect locale setting when starting.
        
    - 1.20alpha25 :
    
        - pkprinters allows --list to normal users, but require user
          to be a PyKota administrator when another command line 
          option is used.
          
        - pkhint doesn't use absolute path to search for helper commands
          anymore.
          
        - Spanish translation ready for 1.20.   
        
    - 1.20alpha24 :
    
        - Now warnpykota only warns users limited by balance once.
        
        - Now warnpykota only warns users who have ever printed,
          to not cause confusion to users who have just opened
          their account.
        
        - Prepared help messages for translations.
        
    - 1.20alpha23 :
    
        - Add workaround for locale problem.
        
    - 1.20alpha22 :
    
        - Hopefully final fix for data encoding charset.
        
        - edpykota now refuse to work if the user is not a PyKota admin.
        
        - Fixes a recently introduced bug with users groups and PostgreSQL.
        